# release-kthx

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh  release-kthx.toml
.github/workflows/: ci.yml  self-release.yml
crates/release-kthx-domain/: Cargo.toml
crates/release-kthx-domain/src/: commit.rs  internal_dependencies.rs  lib.rs  release_plan.rs  topology.rs  versioning.rs
src/: changelog.rs  cli.rs  config.rs  event.rs  git.rs  github.rs  main.rs  release.rs
