[package]
name = "release-kthx"
version = "0.1.2"
edition = "2024"

[workspace]
members = ["crates/release-kthx-domain"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
release-kthx-domain = { path = "crates/release-kthx-domain" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.12"
